--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
 *{
     margin: 0px;
     padding: 0px;
+    font-family: 'Inter', sans-serif;
 }
 body{
     padding-left: 50px;
     padding-right: 50px;
+    overflow-x: hidden;
 }
 p, a{
     font-size: 15px;
@@ -22,9 +25,10 @@ nav{
     color: hsl(240, 1%, 47%);
     padding: 10px;
     transition: color 500ms;
+    font-weight: 500;
 }
 .nav-link:hover{
-    color: hsl(240, 3%, 70%);
+    color: hsl(35, 77%, 62%);
 }
 main{
     display: grid;
@@ -32,20 +36,114 @@ main{
     grid-template-rows: 50% 50%;
     grid-gap: 20px;
     width: 100%;
-    height: 600px;
+    position: relative;
 }
 .web-img{
     grid-column-start: 1;
     grid-column-end: 3;
     background-size: cover;
-    background-image: url('/assets/images/image-web-3-desktop.jpg');
+    background-image: url('assets/images/image-web-3-desktop.jpg');
 }
 .side{
     grid-column-start: 3;
     grid-row-start: 1;
     grid-row-end: 3;
     background-color: black;
+    padding: 50px;
 }
-h1{
+.side h1{
     color:hsl(35, 77%, 62%);
+    font-size: 45px;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+.article{
+    color: white;
+    border-bottom: 1px solid hsl(240, 1%, 47%);
+    padding-bottom: 40px;
+    padding-top: 40px;
+    cursor: pointer;
+}
+.article:last-child{
+    border: none;
+}
+.article h2{
+    padding-bottom: 10px;
+    transition: color 200ms;
+}
+.article h2:hover{
+    color: hsl(35, 77%, 62%);
+}
+.article p{
+    color: hsl(240, 3%, 70%);
+}
+.h h1{
+    font-size: 70px;
+    font-weight: 800;
+}
+.desc p{
+    color: hsl(240, 1%, 47%);
+    font-size: 20px;
+    align-self: flex-start;
+    line-height: 30px;
+}
+.desc{
+    padding: 20px;
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+}
+.readmorebtn{
+    padding: 15px;
+    width: 200px;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 2px;
+    background-color: hsl(5, 85%, 63%);
+    border: none;
+    color: white;
+    transition: background-color 500ms;
+    cursor: pointer;
+}
+.readmorebtn:hover{
+    background-color: black;
+}
+.foot{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+    margin-top: 40px;
+    width: 100%;
+}
+card{
+    display: flex;
+    cursor: pointer;
+    margin-bottom: 30px;
+}
+.cardtxt{
+    padding-left: 30px;
+}
+.cardtxt h1{
+    color: hsl(240, 3%, 70%);
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.cardtxt h2{
+    font-weight: 800;
+    transition: color 200ms;
+}
+.cardtxt:hover h2{
+    color: hsl(5, 85%, 63%);
+}
+.cardtxt p{
+    color: hsl(240, 1%, 47%);
+    margin-top: 30px;
+    font-size: 20px;2
+}
+@media screen and (max-width: 1000px){
+    .foot{
+        flex-wrap: wrap;
+    }
 }
