--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     margin: 0px;
     padding: 0px;
     font-family: 'Inter', sans-serif;
+    box-sizing: border-box;
+    /* border: 1px solid red; */
 }
 body{
     padding-left: 50px;
@@ -19,6 +21,9 @@ nav{
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+}
+.nav-btns img{
+    display: none;
 }
 .nav-link{
     text-decoration: none;
@@ -38,11 +43,16 @@ main{
     width: 100%;
     position: relative;
 }
+picture{
+    grid-column: 1/3;
+    overflow: hidden;
+    display: inline-block;
+}
 .web-img{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    background-size: cover;
-    background-image: url('assets/images/image-web-3-desktop.jpg');
+    width: 100%;
+}
+.h{
+    grid-row-start: 2;
 }
 .side{
     grid-column-start: 3;
@@ -92,6 +102,7 @@ main{
     display: flex;
     align-items: flex-end;
     flex-wrap: wrap;
+    grid-row-start: 2;
 }
 .readmorebtn{
     padding: 15px;
@@ -120,6 +131,7 @@ card{
     display: flex;
     cursor: pointer;
     margin-bottom: 30px;
+    margin: 10px;
 }
 .cardtxt{
     padding-left: 30px;
@@ -140,9 +152,73 @@ card{
 .cardtxt p{
     color: hsl(240, 1%, 47%);
     margin-top: 30px;
-    font-size: 20px;2
+    font-size: 20px;
 }
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 768px){
+    main{
+        display: block;
+    }
+    body{
+        padding: 0;
+        margin: 4vw;
+    }
+    nav{
+        padding: 25px 0;
+    }
+    .nav-btns{
+        position: fixed;
+        z-index: 2;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        width: 70%;
+        background-color: white;
+        padding-left: 10px;
+    }
+    .nav-link{
+        display: block;
+        color: black;
+        font-size: 18px;
+    }
+    .navimg{
+        display: flex;
+        justify-content: flex-end;
+    }
+    .nav-btns img{
+        margin: 20px;
+        display: block;
+        width: 40px;
+        right: 0;
+    }
+    .desc{
+        margin: 0;
+    }
+    .desc p{
+        margin-bottom: 20px;
+    }
+    .foot{
+        flex-wrap: wrap;
+        padding: 0;
+    }
+    card{
+        height: 200px;
+        margin: 10px 0;
+    }
+    card img{
+        width: 30%;
+    }
+    .cardtxt h1{
+        font-size: 35px;
+    }
+    .cardtxt h2{
+        font-size: 20px;
+    }
+    .cardtxt p{
+        margin-top: 20px;
+        font-size: 15px;
+    }
+}
+@media screen and (max-width: 1024px) {
     .foot{
         flex-wrap: wrap;
     }
